Images and Text added

--- a/index.html
+++ b/index.html
@@ -3,56 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Greek Gods</title>
 </head>
 <body>
 
     <div class="header">
-        <div class="logo"></div>
-        <div class="link-one"></div>
-        <div class="link-two"></div>
-        <div class="link-three"></div>
+
+        <div class="logo">
+            <img src="images/logo.jpg" alt="logo">
+        </div>
+
+        <div class="link-one">
+            <div class="header-text">
+
+            </div>
+        </div>
+
+        <div class="link-two">
+            <div class="header-text">
+
+            </div>
+        </div>
+
+        <div class="link-three">
+            <div class="header-text">
+
+            </div>
+        </div>
+
     </div>
     
+
     <div class="hero">
+
         <div class="left-side">
-            <h1></h1>
-            <p></p>
-            <button></button>
+            <h1>Become a Greek God</h1>
+            <p>Enter the realms of the gods and become godly yourself. We teach you step by step how to unlock your full potential. Do you have what it takes?</p>
+            <button>Yes please</button>
         </div>
         
         <div class="right-side">
-            <img src="" alt="">
+            <img src="images/hero.jpg" alt="Greek Gods">
         </div>
+
     </div>
+
 
     <div class="features">
-        <h2></h2>
+
+        <h2>After finishing this course, you will...</h2>
+
         <div class="features-img-text">
-            <div class="feature-one"></div>
-            <div class="feature-two"></div>
-            <div class="feature-three"></div>
-            <div class="feature-four"></div>
+
+            <div class="feature-one">
+                <img src="images/zeus.jpg" alt="Zeus">
+                <p>...become powerful like Zeus. Even code will fear you.</p>
+            </div>
+
+            <div class="feature-two">
+                <img src="images/athene.jpg" alt="Athene">
+                <p>...become as wise as Athene. No need for tutorials anymore.</p>
+            </div>
+
+            <div class="feature-three">
+                <img src="images/hermes.jpg" alt="Hermes">
+                <p>...become fast like Hermes. Cars are for losers.</p>
+            </div>
+
+            <div class="feature-four">
+                <img src="images/aphrodite.jpg" alt="Aphrodite">
+                <p>...become as attractive as Aphrodite. Fuck Tinder.</p>
+            </div>
+
         </div>
+
     </div>
 
+
     <div class="socialproof">
-        <p></p>
-        <p></p>
+        <p>"I just took this course, and let me tell you, it’s divine! As the All-Father, I’ve seen battles and epic feasts, but nothing compares to the transformation this course offers!
+            With a few lessons, you’ll be throwing lightning bolts (well, sort of) and charming mortals like a true god. So don’t just sit there—sign up now! If it’s good enough for Odin, it’s good enough for you!
+            P.S. Just remember: with great power comes great responsibility… and awkward dinner parties with Thor!"</p>
+        <p>-Odin, God of Life and Death</p>
     </div>
 
     <div class="cta">
         <div class="card">
             <div class="cta-text">
-                <h3></h3>
-                <p></p>
+                <h3>Sign up for only 100k $!!</h3>
+                <p>What did you thought? Becoming a god for free..heh heh heh, nope.</p>
             </div>
-            <button></button>
+            <button>Teach me Master</button>
         </div>
     </div>
 
     <div class="footer">
-
+        <div>Copyright © Greek Gods 2024</div>
     </div>
 
 </body>
