--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greek Gods</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -13,22 +14,16 @@
             <img src="images/logo.jpg" alt="logo">
         </div>
 
-        <div class="link-one">
-            <div class="header-text">
-
-            </div>
+        <div class="link-one header-text">
+                Is this easy?
         </div>
 
-        <div class="link-two">
-            <div class="header-text">
-
-            </div>
+        <div class="link-two header-text">
+                Benefits of being a God
         </div>
 
-        <div class="link-three">
-            <div class="header-text">
-
-            </div>
+        <div class="link-three header-text">
+                Contact the Olymp
         </div>
 
     </div>
