--- a/index.html
+++ b/index.html
@@ -76,10 +76,11 @@
 
 
     <div class="socialproof">
-        <p>"I just took this course, and let me tell you, it’s divine! As the All-Father, I’ve seen battles and epic feasts, but nothing compares to the transformation this course offers!
+            <p class="sp-text">"I just took this course, and let me tell you, it’s divine! As the All-Father, I’ve seen battles and epic feasts, but nothing compares to the transformation this course offers!
             With a few lessons, you’ll be throwing lightning bolts (well, sort of) and charming mortals like a true god. So don’t just sit there—sign up now! If it’s good enough for Odin, it’s good enough for you!
             P.S. Just remember: with great power comes great responsibility… and awkward dinner parties with Thor!"</p>
-        <p>-Odin, God of Life and Death</p>
+            <p class="sp-author">-Odin, God of Life and Death</p>
+        
     </div>
 
     <div class="cta">
@@ -88,7 +89,9 @@
                 <h3>Sign up for only 100k $!!</h3>
                 <p>What did you thought? Becoming a god for free..heh heh heh, nope.</p>
             </div>
-            <button>Teach me Master</button>
+            <div class="button-cta">
+                <button>Teach me Master</button>
+            </div>
         </div>
     </div>
 
